--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "lucide-react": "^0.257.0",
-    "next": "13.4.7",
+    "next": "^13.5.6",
     "next-themes": "^0.2.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
